// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog/> handles keyup and props change correctly if open 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="BackdropStyled-haniwh fQtLeN"
    onClick={[Function]}
  />
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly call button onPress if contains buttons 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        >
          <div>
             test 
          </div>
        </div>
        <div
          className="DialogActionsStyled-bxvRWy cDlFXu"
        >
          <div
            className="DialogActionsRegionStyled-gbmRfm iFQuMh"
          >
            <div
              className="DialogButtonStyled-eVQtUE bvtQpF"
            >
              <button
                className="ButtonStyled__Button-FHerW KXGKt"
                disabled={false}
                onClick={[Function]}
                radius="default"
                size="normal"
                title=""
              >
                <div
                  className="ButtonTextStyled-kqmWUR foLdiD"
                  size="normal"
                >
                  <div
                    className="ButtonTitleStyled-EwESb hkRlbG"
                    size="normal"
                  >
                    Button 1
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if contains children 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        >
          <div>
             test 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if has prop regionAside 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
      <div
        className="RegionSideStyled-bgGKMU VymvJ"
      >
        <div>
          RegionAside
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop backdrop set and click on backdrop 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="BackdropStyled-haniwh fQtLeN"
    onClick={[Function]}
  />
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop backdrop set and click on backdrop 2`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="BackdropStyled-haniwh fQtLeN"
    onClick={[Function]}
  />
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop backdrop set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="BackdropStyled-haniwh fQtLeN"
    onClick={[Function]}
  />
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop closeOnBackdropClick set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop closeOnEscape set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop haveCloseButton set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogCloseButtonStyled-hVCEfW unido"
          onClick={[Function]}
        >
          <div
            className="IconSvgStyled-kZHpyB kakXQl"
            color=""
            rotate={0}
            size="normal"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.2,6.2 17.8,4.8 12,10.6 6.2,4.8 4.8,6.2 10.6,12 4.8,17.8 6.2,19.2 12,13.4 17.8,19.2 19.2,17.8 13.4,12"
              />
            </svg>
          </div>
        </div>
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop minWidth > 0 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD ibOrEE"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop open set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop scrollable set true 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT kKIryw"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop subtitle set subtitle 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogHeadingStyled-bqpjlr kuIaax"
        >
          <div
            className="DialogTitleStyled-dSHLVh bfcXQq"
          >
            <div
              className="DialogTitleTextStyled-bSznZq ksYDGK"
            >
              
            </div>
            <div
              className="DialogSubtitleTextStyled-jnminq bRaqHB"
            >
              subtitle
            </div>
          </div>
        </div>
        <div
          className="DialogContentStyled-cqiTXT lnOkDs"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly if prop title set title 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogHeadingStyled-bqpjlr kuIaax"
        >
          <div
            className="DialogTitleStyled-dSHLVh bfcXQq"
          >
            <div
              className="DialogTitleTextStyled-bSznZq ksYDGK"
            >
              title
            </div>
          </div>
        </div>
        <div
          className="DialogContentStyled-cqiTXT lnOkDs"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly left buttons 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        >
          <div>
             test 
          </div>
        </div>
        <div
          className="DialogActionsStyled-bxvRWy cDlFXu"
        >
          <div
            className="DialogActionsRegionStyled-gbmRfm lyHYn"
          >
            <div
              className="DialogButtonStyled-eVQtUE bvtQpF"
            >
              <button
                className="ButtonStyled__Button-FHerW KXGKt"
                disabled={false}
                onClick={[Function]}
                radius="default"
                size="normal"
                title=""
              >
                <div
                  className="ButtonTextStyled-kqmWUR foLdiD"
                  size="normal"
                >
                  <div
                    className="ButtonTitleStyled-EwESb hkRlbG"
                    size="normal"
                  >
                    Button
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders correctly with default props 1`] = `null`;

exports[`<Dialog/> renders with DialogContentText 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        >
          <div
            className="DialogContentTextStyled-kiYVUt hEuaRE"
          >
            Texty text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialog/> renders with windowTitle 1`] = `
<div
  className="ModalStyled-bgFgAB stAJv"
>
  <div
    className="OverflowWrapperStyled-fMElgD keDhds"
  >
    <div
      className="ContentWrapperStyled-eeQVis ghuYyQ"
    >
      <div
        className="RegionMainStyled-eEBrJL jgEVet"
      >
        <div
          className="DialogContentStyled-cqiTXT heztIq"
        />
      </div>
    </div>
  </div>
</div>
`;
